--- a/app/boards/shields/dumbpad/dumbpad.dtsi
+++ b/app/boards/shields/dumbpad/dumbpad.dtsi
@@ -53,13 +53,13 @@
 		compatible = "alps,ec11";
 		a-gpios = <&pro_micro 16 (GPIO_ACTIVE_HIGH | GPIO_PULL_UP)>;
 		b-gpios = <&pro_micro 4  (GPIO_ACTIVE_HIGH | GPIO_PULL_UP)>;
-		resolution = <4>;
+		steps = <30>;
 	};
 	right_encoder: encoder_right {
 		compatible = "alps,ec11";
 		a-gpios = <&pro_micro 2 (GPIO_ACTIVE_HIGH | GPIO_PULL_UP)>;
 		b-gpios = <&pro_micro 3 (GPIO_ACTIVE_HIGH | GPIO_PULL_UP)>;
-		resolution = <4>;
+		steps = <30>;
 	};
 };
 &pro_micro_i2c {
